Introduce new core build item: ModuleEnableNativeAccess